# tams_pr2

tams_pr2/: CMakeLists.txt  package.xml
tams_pr2/media/calibration_wiki/: r_arm_cal_adapter.scad
tams_pr2_bringup/: CMakeLists.txt  package.xml
tams_pr2_bringup/config/: analyzers.yaml  robot.yaml
tams_pr2_bringup/config/left_gripper_ft/: ft17226_params.yaml
tams_pr2_bringup/launch/: kinect2_bridge.launch  move_base_straight.launch  remote.launch  tams_pr2.launch  tams_pr2_stubbed_hand.launch  teleop_keyboard.launch  trixi.launch  trixi_demo.launch  trixi_hand_stub.launch  trixi_navigation.launch  trixi_simple_navigation.launch  trixi_test.launch
tams_pr2_bringup/launch/include/: left_gripper.launch  left_gripper.launch.xml  move_base.xml  pr2-c2.launch  pr2-c2.launch.xml  pr2.launch  pr2.launch.xml  pr2_teleop_l_gripper.launch  teleop.launch
tams_pr2_bringup/scripts/: calibrate_pr2.py  calibrate_r_arm.py  calibrate_right_arm.py  joint_state_publisher_hand.py
tams_pr2_bringup/src/: pr2_demo_test.cpp
tams_pr2_calibration/: CMakeLists.txt  README.md  package.xml
tams_pr2_calibration/config/: .left_arm_calibrate_apriltag.yaml.swp  l_forearm_calibrate.yaml  l_forearm_capture.yaml  left_arm_azure_calibrate_apriltag.yaml  left_arm_azure_capture_apriltag.yaml  left_arm_calibrate_apriltag.yaml  left_arm_calibrate_checkerboard.yaml  left_arm_capture_apriltag.yaml  left_arm_capture_checkerboard.yaml  right_arm_azure_calibrate_apriltag.yaml  right_arm_azure_capture_apriltag.yaml  right_arm_calibrate_apriltag.yaml  right_arm_calibrate_checkerboard.yaml  right_arm_capture_apriltag.yaml  right_arm_capture_checkerboard.yaml
tams_pr2_calibration/launch/: left_arm_apriltag.launch  left_arm_azure_apriltag.launch  left_arm_checkerboard.launch  left_forarm_camera_apriltag.launch  right_arm_apriltag.launch  right_arm_azure_apriltag.launch  right_arm_checkerboard.launch  update_tams_pr2_calibration.launch  visualize_joint_offsets.launch
tams_pr2_calibration/scripts/: calibration_updater.py  get_poses.py  visualize_calibration_offsets.py
tams_pr2_calibration/src/: l_forearm_sample_poses.cpp  left_arm_sample_poses.cpp  right_arm_sample_poses.cpp
tams_pr2_controller_configuration/: CMakeLists.txt  package.xml  pr2_arm_controllers.yaml  pr2_calibration_controllers.yaml  pr2_default_controllers.launch  pr2_gripper_controllers.yaml  pr2_head_controller.yaml  pr2_joint_effort_controllers.yaml  pr2_joint_group_velocity_controllers.yaml  pr2_joint_position_controllers.yaml  pr2_joint_velocity_controllers.yaml  pr2_jt_controllers.launch  pr2_torso_controller.yaml
tams_pr2_description/: CMakeLists.txt  package.xml
tams_pr2_description/config/: calibration_config.yaml
tams_pr2_description/launch/: test_pixel_6_pro_urdf.launch  test_tams_azure_kinect.launch  upload_pr2.launch
tams_pr2_description/meshes/: azure_holder.dae  azure_holder.stl  pixel_6_pro.stl  pr2-pixel-6-pro-holder.scad  pr2_pixel_6_pro_holder_v3.stl
tams_pr2_description/meshes/base_v0/: base_L.stl  tray.dae  tray.scad  tray.stl  tray.wings  tray_L.stl
tams_pr2_description/meshes/pr2_shadow_adapter/: adapter_surface_original.dxf  pr2_shadow_adapter.scad  pr2_shadow_adapter.stl
tams_pr2_description/meshes/tray/: tray.stl
tams_pr2_description/meshes/xtion/: README  xtion.old.stl  xtion.stl
tams_pr2_description/robots/: calibrated.urdf  pixel_6_pro_demo.urdf.xacro  tams_azure_kinect_demo.urdf.xacro  tams_pr2.urdf.xacro  trixi.urdf.xacro
tams_pr2_description/urdf/: biotac.urdf.xacro  pixel_6_pro.urdf.xacro  tams_azure_kinect.urdf.xacro  tams_base.urdf.xacro  tams_eye.urdf.xacro  tams_head_additions.urdf.xacro  tams_hokuyo_lx30_laser.urdf.xacro  tams_pr2_shadow_adapter.urdf.xacro  tams_pr2_tray.urdf.xacro  turn_gravity_off.urdf.xacro  xtion_camera.urdf.xacro
tams_pr2_description/urdf/base_v0/: base.urdf.xacro
tams_pr2_description/urdf/ft_forearm/: README  ft_ati_mini45.urdf.xacro  ft_forearm.transmission.xacro  pr2_ft_forearm.urdf.xacro
tams_pr2_description/urdf/sensors/: tray_hokuyo_lx30_laser.gazebo.xacro  tray_hokuyo_lx30_laser.urdf.xacro
tams_pr2_doc/: Demos.md  Docker.md  Network.md  README.md  calibration.md
tams_pr2_gripper_action/: CMakeLists.txt  package.xml
tams_pr2_gripper_action/src/: pr2_gripper_action.cpp
tams_pr2_kinect2_calibration/: CMakeLists.txt  README.md  package.xml
tams_pr2_kinect2_calibration/launch/: kinect2_calibration_demo.launch  kinect2_calibration_steps.launch
tams_pr2_kinect2_calibration/src/: calibration_move.cpp
tams_pr2_kinect2_calibration/srv/: Kinect2CalibrationControl.srv
tams_pr2_mannequin_mode/: CMakeLists.txt  package.xml
tams_pr2_mannequin_mode/config/: pr2_arm_controllers_loose.yaml
tams_pr2_mannequin_mode/launch/: controllers.launch  controllers_nohead.launch  pr2_mannequin_mode.launch  pr2_mannequin_mode_nohead.launch  trajectory_lock.launch
tams_pr2_mannequin_mode/scripts/: mannequin_mode_server.py  trajectory_lock.py  turn_off  turn_on
tams_pr2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tams_pr2_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  monitoring_capability.yaml  moveit_sim_controller.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  sensors_snapshot_pointcloud.yaml  simple_moveit_controllers.yaml  tams_pr2.srdf  tams_pr2_execution_controllers.yaml
tams_pr2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_ros_control.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ros_controllers.launch  (+14 more)
tams_pr2_robot/: CMakeLists.txt  package.xml
tams_pr2_simulation/: CMakeLists.txt  package.xml
tams_pr2_simulation/config/: pr2_arm_controllers.yaml
tams_pr2_simulation/launch/: pr2_bringup.launch  pr2_default_controllers.launch  tams_pr2_simulation.launch
tams_pr2_simulation/models/tams_table/: model.config  model.sdf
tams_pr2_simulation/scripts/: start_gravity.py
tams_pr2_simulation/worlds/: empty.world  tams_lab.world
