<?xml version="1.0"?>
<package>
  <name>tams_pr2</name>
  <version>0.0.0</version>
  <description>The tams_pr2 meta package</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <maintainer email="einig@informatik.uni-hamburg.de">Lasse Einig</maintainer>


  <author email="5jonetz@informatik.uni-hamburg.de">Yannick Jonetzko</author>
  <license>BSD</license>

  <url type="website">https://gogs.crossmodal-learning.org/TAMS-PR2/tams_pr2/wiki</url>
  <url type="repository">https://gogs.crossmodal-learning.org/TAMS-PR2/tams_pr2.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tams_pr2_description</run_depend>
  <run_depend>tams_pr2_bringup</run_depend>
  <run_depend>tams_pr2_moveit_config</run_depend>
  <run_depend>tams_pr2_controller_configuration</run_depend>
  <run_depend>tams_pr2_kinect2_calibration</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
