<?xml version="1.0"?>
<package>
  <name>tams_pr2_bringup</name>
  <version>0.0.0</version>
  <description>The launch files for TAMS' PR2</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <license>BSD</license>

  <url type="website">https://redmine.mafiasi.de/projects/tams_pr2_robot</url>
  <url type="repository">https://redmine.mafiasi.de/tams_pr2_robot.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>

  <run_depend>pr2_motors_analyzer</run_depend>
  <run_depend>tams_pr2_description</run_depend>

</package>
