<?xml version="1.0"?>
<package format="2">
  <name>tams_pr2_calibration</name>
  <version>0.0.0</version>
  <description>
    Launch and configuration files for calibrating the pr2 using the 'robot_calibration' package.
    This package is based on the fetch calibration package.
  </description>

  <author email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</author>
  <author email="einig@informatik.uni-hamburg.de">Lasse Einig</author>
  <author email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</author>

  <maintainer email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robot_calibration</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>robot_calibration</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_calibration</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

</package>
