<package>
  <name>tams_pr2_description</name>
  <version>0.0.0</version>
  <description>The urdf description of TAMS' PR2 robot Trixi</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>

  <license>BSD</license>

  <url type="website">https://redmine.mafiasi.de/projects/tams_pr2_robot</url>
  <url type="repository">https://redmine.mafiasi.de/tams_pr2_robot.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>sr_description</run_depend>
</package>
