<?xml version="1.0"?>
<package>
  <name>tams_pr2_kinect2_calibration</name>
  <version>0.0.0</version>
  <description>The tams_pr2_kinect2_calibration package</description>

  <maintainer email="einig@informatik.uni-hamburg.de">Lasse Einig</maintainer>
  <author email="5jonetk@informatik.uni-hamburg.de">Yannick Jonetzko</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>simple_head</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>simple_head</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
