<?xml version="1.0"?>
<package>
  <name>tams_pr2_simulation</name>
  <version>0.0.0</version>
  <description>The tams_pr2_simulation package</description>

  <maintainer email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</maintainer>
  <author email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/models" />
  </export>

</package>
